refactor!: update pages styling and contents

--- a/trading/markets/us-markets.mdx
+++ b/trading/markets/us-markets.mdx
@@ -416,7 +416,7 @@ icon: 'flag-usa'
 ## Resources for US Market Analysis
 
 <CardGroup cols={3}>
-  <Card title="SEC Edgar Database" icon="file-text" href="https://sec.gov/edgar">
+  <Card title="SEC Edgar Database" icon="file" href="https://sec.gov/edgar">
     Official company filings and financial statements
   </Card>
 
