--- a/trading/strategies/trading-strategies.mdx
+++ b/trading/strategies/trading-strategies.mdx
@@ -13,461 +13,26 @@ icon: 'chess-king'
 
 ## Trading Strategy Overview
 
-<div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-  <div className="flex items-center gap-4 mb-4">
-    <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center border border-slate-700">
-      <Icon icon="target" size={24} className="text-slate-300" />
-    </div>
-    <div>
-      <h3 className="text-xl font-bold text-slate-200">Strategic Approach to Markets</h3>
-      <p className="text-slate-400 text-sm">Different time horizons, risk profiles, and methodologies</p>
-    </div>
+Trading strategies are systematic approaches to buying and selling securities. Each strategy has its own risk-reward profile, time horizon, and skill requirements. Understanding these differences is crucial for successful trading and investing.
+
+<div className="grid grid-cols-1 md:grid-cols-2 gap-4 mt-6">
+  <div className="bg-slate-800/50 p-4 rounded-lg border border-slate-700">
+    <span className="text-slate-200 font-semibold mb-2">Key Considerations</span>
+    <ul className="text-slate-300 text-sm space-y-1">
+      <li>Time commitment and availability</li>
+      <li>Risk tolerance and capital size</li>
+      <li>Skill level and experience</li>
+      <li>Market conditions and volatility</li>
+    </ul>
   </div>
-  <p className="text-slate-300">
-    Trading strategies are systematic approaches to buying and selling securities. Each strategy has its own risk-reward profile, time horizon, and skill requirements. Understanding these differences is crucial for successful trading and investing.
-  </p>
-  <div className="grid grid-cols-1 md:grid-cols-2 gap-4 mt-6">
-    <div className="bg-slate-800/50 p-4 rounded-lg border border-slate-700">
-      <h4 className="text-slate-200 font-semibold mb-2">Key Considerations</h4>
-      <ul className="text-slate-300 text-sm space-y-1">
-        <li>• Time commitment and availability</li>
-        <li>• Risk tolerance and capital size</li>
-        <li>• Skill level and experience</li>
-        <li>• Market conditions and volatility</li>
-      </ul>
-    </div>
-    <div className="bg-slate-800/50 p-4 rounded-lg border border-slate-700">
-      <h4 className="text-slate-200 font-semibold mb-2">Success Factors</h4>
-      <ul className="text-slate-300 text-sm space-y-1">
-        <li>• Consistent strategy execution</li>
-        <li>• Proper risk management</li>
-        <li>• Emotional discipline</li>
-        <li>• Continuous learning and adaptation</li>
-      </ul>
-    </div>
-  </div>
-</div>
-
-## Strategy Classification by Time Horizon
-
-<Tabs defaultValue="scalping">
-  <TabsList className="grid w-full grid-cols-4">
-    <TabsTrigger value="scalping">Scalping</TabsTrigger>
-    <TabsTrigger value="day">Day Trading</TabsTrigger>
-    <TabsTrigger value="swing">Swing Trading</TabsTrigger>
-    <TabsTrigger value="position">Position Trading</TabsTrigger>
-  </TabsList>
-
-  <TabsContent value="scalping" className="mt-6">
-    <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-      <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center border border-slate-700">
-          <Icon icon="bolt" size={20} className="text-slate-300" />
-        </div>
-        <div>
-          <h3 className="text-lg font-semibold text-slate-200">Scalping (Seconds to Minutes)</h3>
-          <p className="text-slate-400 text-sm">Ultra-short term, high-frequency trading</p>
-        </div>
-      </div>
-
-      <div className="bg-slate-800/50 p-4 rounded-lg border border-slate-700">
-        <p className="text-slate-300 text-sm">
-          <strong>What is Scalping?</strong> Scalping involves making dozens or hundreds of trades per day, holding positions for seconds to minutes. Scalpers profit from small price movements in highly liquid stocks, often using leverage to amplify returns.
-        </p>
-      </div>
-
-      <div className="grid grid-cols-1 md:grid-cols-2 gap-4 mt-4">
-        <div>
-          <h4 className="font-semibold text-slate-300 mb-2">Advantages</h4>
-          <ul className="text-sm text-slate-400 space-y-1">
-            <li>• Quick profits with small price movements</li>
-            <li>• Limited market exposure reduces risk</li>
-            <li>• Multiple opportunities throughout the day</li>
-            <li>• No overnight position risk</li>
-            <li>• Can profit in both up and down markets</li>
-          </ul>
-        </div>
-
-        <div>
-          <h4 className="font-semibold text-slate-300 mb-2">Disadvantages</h4>
-          <ul className="text-sm text-slate-400 space-y-1">
-            <li>• Extremely high stress and pressure</li>
-            <li>• Significant transaction costs eat profits</li>
-            <li>• Requires full-time market attention</li>
-            <li>• Advanced technical skills essential</li>
-            <li>• High capital requirements for meaningful profits</li>
-          </ul>
-        </div>
-      </div>
-
-      <div className="mt-4">
-        <h4 className="font-semibold text-slate-300 mb-2">Essential Requirements</h4>
-        <div className="flex flex-wrap gap-2">
-          <span className="px-3 py-1 bg-slate-800 text-slate-300 rounded-full text-xs border border-slate-700">Low Latency Connection</span>
-          <span className="px-3 py-1 bg-slate-800 text-slate-300 rounded-full text-xs border border-slate-700">Level 2 Market Data</span>
-          <span className="px-3 py-1 bg-slate-800 text-slate-300 rounded-full text-xs border border-slate-700">Advanced Charting Platform</span>
-          <span className="px-3 py-1 bg-slate-800 text-slate-300 rounded-full text-xs border border-slate-700">Strict Risk Management</span>
-        </div>
-      </div>
-    </div>
-  </TabsContent>
-
-  <TabsContent value="day" className="mt-6">
-    <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-      <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center border border-slate-700">
-          <Icon icon="sun" size={20} className="text-slate-300" />
-        </div>
-        <div>
-          <h3 className="text-lg font-semibold text-slate-200">Day Trading (Minutes to Hours)</h3>
-          <p className="text-slate-400 text-sm">Intraday positions, closed before market close</p>
-        </div>
-      </div>
-
-      <div className="bg-slate-800/50 p-4 rounded-lg border border-slate-700">
-        <p className="text-slate-300 text-sm">
-          <strong>Day Trading Explained:</strong> Day traders open and close all positions within the same trading day, never holding overnight. This strategy focuses on capturing intraday price movements using technical analysis, news events, and market momentum.
-        </p>
-      </div>
-
-      <div className="grid grid-cols-1 md:grid-cols-2 gap-4 mt-4">
-        <div>
-          <h4 className="font-semibold text-slate-300 mb-2">Advantages</h4>
-          <ul className="text-sm text-slate-400 space-y-1">
-            <li>• No overnight market risk exposure</li>
-            <li>• High profit potential with leverage</li>
-            <li>• Active market participation and control</li>
-            <li>• Flexible daily schedule</li>
-            <li>• Quick feedback on trading decisions</li>
-          </ul>
-        </div>
-
-        <div>
-          <h4 className="font-semibold text-slate-300 mb-2">Disadvantages</h4>
-          <ul className="text-sm text-slate-400 space-y-1">
-            <li>• High stress and emotional pressure</li>
-            <li>• Minimum $25,000 capital required (PDT rule)</li>
-            <li>• Pattern Day Trader restrictions</li>
-            <li>• Significant time commitment required</li>
-            <li>• High frequency trading costs</li>
-          </ul>
-        </div>
-      </div>
-
-      <div className="mt-4">
-        <h4 className="font-semibold text-slate-300 mb-2">Popular Day Trading Strategies</h4>
-        <div className="grid grid-cols-2 md:grid-cols-4 gap-2">
-          <span className="px-3 py-2 bg-slate-800 text-slate-300 rounded-lg text-xs text-center border border-slate-700">Momentum Trading</span>
-          <span className="px-3 py-2 bg-slate-800 text-slate-300 rounded-lg text-xs text-center border border-slate-700">Breakout Trading</span>
-          <span className="px-3 py-2 bg-slate-800 text-slate-300 rounded-lg text-xs text-center border border-slate-700">Reversal Trading</span>
-          <span className="px-3 py-2 bg-slate-800 text-slate-300 rounded-lg text-xs text-center border border-slate-700">Gap Trading</span>
-        </div>
-      </div>
-    </div>
-  </TabsContent>
-
-  <TabsContent value="swing" className="mt-6">
-    <div className="bg-slate-900/50">
-      <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-          <span className="text-white text-lg">trending-up</span>
-        </div>
-        <div>
-          <h3 className="text-lg font-semibold text-slate-200">Swing Trading (Days to Weeks)</h3>
-          <p className="text-slate-400 text-sm">Medium-term positions capturing price swings</p>
-        </div>
-      </div>
-
-      <div className="grid grid-cols-1 md:grid-cols-2 gap-4 mt-4">
-        <div>
-          <h4 className="font-semibold text-slate-300 mb-2">Advantages</h4>
-          <ul className="text-sm text-slate-400 space-y-1">
-            <li>• Less time-intensive</li>
-            <li>• Lower transaction costs</li>
-            <li>• Better work-life balance</li>
-            <li>• Technical analysis focus</li>
-          </ul>
-        </div>
-
-        <div>
-          <h4 className="font-semibold text-slate-300 mb-2">Disadvantages</h4>
-          <ul className="text-sm text-slate-400 space-y-1">
-            <li>• Overnight and weekend risk</li>
-            <li>• Requires patience</li>
-            <li>• Market gap risk</li>
-            <li>• Fewer trading opportunities</li>
-          </ul>
-        </div>
-      </div>
-
-      <div className="mt-4">
-        <h4 className="font-semibold text-slate-300 mb-2">Common Swing Trading Patterns</h4>
-        <div className="grid grid-cols-2 md:grid-cols-3 gap-2">
-          <span className="px-3 py-2 bg-slate-800 text-slate-300 rounded-lg text-xs text-center">Cup & Handle</span>
-          <span className="px-3 py-2 bg-slate-800 text-slate-300 rounded-lg text-xs text-center">Flag Patterns</span>
-          <span className="px-3 py-2 bg-slate-800 text-slate-300 rounded-lg text-xs text-center">Support/Resistance</span>
-        </div>
-      </div>
-    </div>
-  </TabsContent>
-
-  <TabsContent value="position" className="mt-6">
-    <div className="bg-slate-900/50">
-      <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-          <span className="text-white text-lg">target</span>
-        </div>
-        <div>
-          <h3 className="text-lg font-semibold text-slate-200">Position Trading (Weeks to Months)</h3>
-          <p className="text-slate-400 text-sm">Long-term positions based on major trends</p>
-        </div>
-      </div>
-
-      <div className="grid grid-cols-1 md:grid-cols-2 gap-4 mt-4">
-        <div>
-          <h4 className="font-semibold text-slate-300 mb-2">Advantages</h4>
-          <ul className="text-sm text-slate-400 space-y-1">
-            <li>• Minimal time commitment</li>
-            <li>• Lower stress levels</li>
-            <li>• Tax advantages (long-term gains)</li>
-            <li>• Captures major trends</li>
-          </ul>
-        </div>
-
-        <div>
-          <h4 className="font-semibold text-slate-300 mb-2">Disadvantages</h4>
-          <ul className="text-sm text-slate-400 space-y-1">
-            <li>• Extended market exposure</li>
-            <li>• Larger capital requirements</li>
-            <li>• Fewer opportunities</li>
-            <li>• Requires strong conviction</li>
-          </ul>
-        </div>
-      </div>
-
-      <div className="mt-4">
-        <h4 className="font-semibold text-slate-300 mb-2">Position Trading Focus Areas</h4>
-        <div className="grid grid-cols-2 gap-2">
-          <span className="px-3 py-2 bg-slate-800 text-slate-300 rounded-lg text-xs text-center">Macro Trends</span>
-          <span className="px-3 py-2 bg-slate-800 text-slate-300 rounded-lg text-xs text-center">Fundamental Analysis</span>
-        </div>
-      </div>
-    </div>
-  </TabsContent>
-</Tabs>
-
-## Popular Trading Strategies
-
-<div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 my-8">
-
-  <div className="bg-slate-900/50">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">bar-chart</span>
-      </div>
-      <h3 className="text-lg font-semibold text-slate-200">Momentum Trading</h3>
-    </div>
-    <p className="text-slate-400 text-sm mb-4">
-      Following securities that are moving strongly in one direction on high volume.
-    </p>
-    <div className="space-y-2">
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Strong directional moves</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">High volume confirmation</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">News catalyst driven</span>
-      </div>
-    </div>
-  </div>
-
-  <div className="bg-slate-900/50">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">refresh</span>
-      </div>
-      <h3 className="text-lg font-semibold text-slate-200">Mean Reversion</h3>
-    </div>
-    <p className="text-slate-400 text-sm mb-4">
-      Betting that prices will return to their historical average after extreme moves.
-    </p>
-    <div className="space-y-2">
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Oversold/overbought conditions</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Statistical analysis</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Range-bound markets</span>
-      </div>
-    </div>
-  </div>
-
-  <div className="bg-slate-900/50">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">dollar-sign</span>
-      </div>
-      <h3 className="text-lg font-semibold text-slate-200">Arbitrage</h3>
-    </div>
-    <p className="text-slate-400 text-sm mb-4">
-      Exploiting price differences of the same asset across different markets.
-    </p>
-    <div className="space-y-2">
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Risk-free profit</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Market inefficiencies</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Advanced technology required</span>
-      </div>
-    </div>
-  </div>
-
-  <div className="bg-slate-900/50">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">🎢</span>
-      </div>
-      <h3 className="text-lg font-semibold text-slate-200">Breakout Trading</h3>
-    </div>
-    <p className="text-slate-400 text-sm mb-4">
-      Entering positions when price breaks through established support or resistance levels.
-    </p>
-    <div className="space-y-2">
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Technical pattern recognition</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Volume confirmation</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">False breakout risk</span>
-      </div>
-    </div>
-  </div>
-
-  <div className="bg-slate-900/50">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">trending-up</span>
-      </div>
-      <h3 className="text-lg font-semibold text-slate-200">Trend Following</h3>
-    </div>
-    <p className="text-slate-400 text-sm mb-4">
-      Identifying and riding established trends until they show signs of reversal.
-    </p>
-    <div className="space-y-2">
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Moving averages</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Trend strength indicators</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Risk management crucial</span>
-      </div>
-    </div>
-  </div>
-
-  <div className="bg-slate-900/50">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">scale</span>
-      </div>
-      <h3 className="text-lg font-semibold text-slate-200">Pairs Trading</h3>
-    </div>
-    <p className="text-slate-400 text-sm mb-4">
-      Trading two correlated securities when their price relationship diverges from historical norms.
-    </p>
-    <div className="space-y-2">
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Market neutral strategy</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Statistical relationships</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Reduced market risk</span>
-      </div>
-    </div>
-  </div>
-
-</div>
-
-## Risk Management in Trading Strategies
-
-<div className="bg-slate-900/50">
-  <h3 className="text-xl font-bold text-slate-200 mb-4">shield Essential Risk Management Principles</h3>
-
-  <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
-    <div>
-      <h4 className="font-semibold text-slate-300 mb-3">Position Sizing Rules</h4>
-      <div className="space-y-3">
-        <div className="flex items-start gap-3">
-          <span className="w-6 h-6 bg-slate-800 text-red-600 dark:text-red-400 rounded-full flex items-center justify-center text-sm font-bold">1</span>
-          <div>
-            <p className="font-medium text-slate-300">1% Risk Rule</p>
-            <p className="text-sm text-slate-400">Never risk more than 1% of capital on a single trade</p>
-          </div>
-        </div>
-        <div className="flex items-start gap-3">
-          <span className="w-6 h-6 bg-slate-800 text-red-600 dark:text-red-400 rounded-full flex items-center justify-center text-sm font-bold">2</span>
-          <div>
-            <p className="font-medium text-slate-300">Kelly Criterion</p>
-            <p className="text-sm text-slate-400">Optimal position size based on win rate and risk/reward</p>
-          </div>
-        </div>
-        <div className="flex items-start gap-3">
-          <span className="w-6 h-6 bg-slate-800 text-red-600 dark:text-red-400 rounded-full flex items-center justify-center text-sm font-bold">3</span>
-          <div>
-            <p className="font-medium text-slate-300">Portfolio Heat</p>
-            <p className="text-sm text-slate-400">Total risk across all open positions</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div>
-      <h4 className="font-semibold text-slate-300 mb-3">Stop Loss Strategies</h4>
-      <div className="space-y-3">
-        <div className="p-3 bg-slate-900/50 dark:bg-slate-800 rounded-lg border border-slate-700">
-          <p className="font-medium text-slate-300 text-sm">Technical Stop Loss</p>
-          <p className="text-xs text-slate-400">Based on support/resistance levels</p>
-        </div>
-        <div className="p-3 bg-slate-900/50 dark:bg-slate-800 rounded-lg border border-slate-700">
-          <p className="font-medium text-slate-300 text-sm">Percentage Stop Loss</p>
-          <p className="text-xs text-slate-400">Fixed percentage from entry price</p>
-        </div>
-        <div className="p-3 bg-slate-900/50 dark:bg-slate-800 rounded-lg border border-slate-700">
-          <p className="font-medium text-slate-300 text-sm">Trailing Stop Loss</p>
-          <p className="text-xs text-slate-400">Adjusts with favorable price movement</p>
-        </div>
-      </div>
-    </div>
+  <div className="bg-slate-800/50 p-4 rounded-lg border border-slate-700">
+    <span className="text-slate-200 font-semibold mb-2">Success Factors</span>
+    <ul className="text-slate-300 text-sm space-y-1">
+      <li>Consistent strategy execution</li>
+      <li>Proper risk management</li>
+      <li>Emotional discipline</li>
+      <li>Continuous learning and adaptation</li>
+    </ul>
   </div>
 </div>
 
@@ -516,40 +81,6 @@ icon: 'chess-king'
       </tr>
     </tbody>
   </table>
-</div>
-
-## Building Your Trading Strategy
-
-<div className="grid grid-cols-1 md:grid-cols-3 gap-6 my-8">
-  <div className="bg-slate-900/50">
-    <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center mb-4">
-      <span className="text-white text-xl">1</span>
-    </div>
-    <h3 className="text-lg font-semibold text-slate-200 mb-2">Define Your Edge</h3>
-    <p className="text-slate-400 text-sm">
-      Identify what gives you an advantage in the market - could be technical patterns, fundamental analysis, or market inefficiencies.
-    </p>
-  </div>
-
-  <div className="bg-slate-900/50">
-    <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center mb-4">
-      <span className="text-white text-xl">2</span>
-    </div>
-    <h3 className="text-lg font-semibold text-slate-200 mb-2">Backtest & Validate</h3>
-    <p className="text-slate-400 text-sm">
-      Test your strategy on historical data to understand its performance characteristics and potential profitability.
-    </p>
-  </div>
-
-  <div className="bg-slate-900/50">
-    <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center mb-4">
-      <span className="text-white text-xl">3</span>
-    </div>
-    <h3 className="text-lg font-semibold text-slate-200 mb-2">Risk Management</h3>
-    <p className="text-slate-400 text-sm">
-      Implement robust risk management rules including position sizing, stop losses, and maximum portfolio risk limits.
-    </p>
-  </div>
 </div>
 
 <Tip>
