--- a/trading/markets/market-regimes.mdx
+++ b/trading/markets/market-regimes.mdx
@@ -13,27 +13,11 @@ icon: 'chart-mixed'
 
 ## What are Market Regimes?
 
-<div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700 my-8">
-  <div className="flex items-center gap-4 mb-4">
-    <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center border border-slate-600">
-      <Icon icon="waves" size={24} className="text-slate-300" />
-    </div>
-    <div>
-      <h3 className="text-xl font-bold text-slate-200">Market Regimes</h3>
-      <p className="text-slate-400 text-sm">Distinct market environments with unique characteristics</p>
-    </div>
-  </div>
-  <p className="text-slate-300">
-    Market regimes are distinct periods characterized by specific market behavior, volatility patterns, and economic conditions. Understanding these regimes helps investors adapt their strategies to current market environments.
-  </p>
+Market regimes are distinct periods characterized by specific market behavior, volatility patterns, and economic conditions. Understanding these regimes helps investors adapt their strategies to current market environments.
 
-  <div className="bg-slate-800/50 p-4 rounded-lg border border-slate-700 mt-6">
-    <h4 className="text-slate-200 font-semibold mb-2">Why Market Regimes Matter</h4>
-    <p className="text-slate-300 text-sm">
-      Different market conditions require different investment approaches. A strategy that works well in a bull market may fail catastrophically in a bear market. Recognizing regime changes early can help protect and grow your wealth.
-    </p>
-  </div>
-</div>
+### Why Market Regimes Matter
+
+Different market conditions require different investment approaches. A strategy that works well in a bull market may fail catastrophically in a bear market. Recognizing regime changes early can help protect and grow your wealth.
 
 ## The Four Market Regimes
 
@@ -43,7 +27,7 @@ icon: 'chart-mixed'
       <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center border border-slate-600">
         <Icon icon="rocket" size={24} className="text-green-400" />
       </div>
-      <h4 className="text-xl font-bold text-emerald-900 dark:text-emerald-100">Bull Market</h4>
+      <span className="text-xl font-bold text-emerald-900 dark:text-emerald-100">Bull Market</span>
     </div>
 
     <div className="space-y-4">
@@ -80,12 +64,12 @@ icon: 'chart-mixed'
     </div>
   </div>
 
-  <div className="bg-slate-900/50">
+  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-xl">trending-down</span>
+      <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center border border-red-600">
+        <Icon icon="down" size={24} className="text-red-400" />
       </div>
-      <h4 className="text-xl font-bold text-red-900 dark:text-red-100">Bear Market</h4>
+      <span className="text-xl font-bold text-red-900 dark:text-red-100">Bear Market</span>
     </div>
 
     <div className="space-y-4">
@@ -122,12 +106,12 @@ icon: 'chart-mixed'
     </div>
   </div>
 
-  <div className="bg-slate-900/50">
+  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-xl">FAST</span>
+      <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center border border-orange-600">
+        <Icon icon="bolt" size={24} className="text-orange-400" />
       </div>
-      <h4 className="text-xl font-bold text-orange-900 dark:text-orange-100">High Volatility</h4>
+      <span className="text-xl font-bold text-orange-900 dark:text-orange-100">High Volatility</span>
     </div>
 
     <div className="space-y-4">
@@ -144,7 +128,7 @@ icon: 'chart-mixed'
           </div>
           <div className="flex items-center gap-2">
             <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
-            <span>High VIX levels (>25)</span>
+            <span>High VIX levels (&gt;25)</span>
           </div>
           <div className="flex items-center gap-2">
             <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
@@ -164,12 +148,12 @@ icon: 'chart-mixed'
     </div>
   </div>
 
-  <div className="bg-slate-900/50">
+  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-xl">moon</span>
+      <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center border border-blue-600">
+        <Icon icon="moon" size={24} className="text-blue-400" />
       </div>
-      <h4 className="text-xl font-bold text-blue-900 dark:text-blue-100">Low Volatility</h4>
+      <span className="text-xl font-bold text-blue-900 dark:text-blue-100">Low Volatility</span>
     </div>
 
     <div className="space-y-4">
@@ -210,17 +194,15 @@ icon: 'chart-mixed'
 ## Major Economic Crises in History
 
 <div className="bg-slate-900/50">
-  <h3 className="text-xl font-bold text-slate-200 mb-6 text-center">Learning from Historical Crises</h3>
-
   <div className="space-y-6">
     <div className="bg-red-50 dark:bg-red-900/20 p-6 rounded-xl border border-slate-700">
       <div className="flex items-center gap-3 mb-4">
         <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
-          <span className="text-white text-lg">bar-chart</span>
+          <Icon icon="building" size={24} className="text-white" />
         </div>
-        <div>
-          <h4 className="font-bold text-red-900 dark:text-red-100">2008 Financial Crisis</h4>
-          <p className="text-red-700 dark:text-red-300 text-sm">The Great Recession</p>
+        <div className="flex flex-col">
+          <span className="font-bold text-red-900 dark:text-red-100">2008 Financial Crisis</span>
+          <span className="text-red-700 dark:text-red-300 text-sm">The Great Recession</span>
         </div>
       </div>
 
@@ -243,11 +225,11 @@ icon: 'chart-mixed'
     <div className="bg-purple-50 dark:bg-purple-900/20 p-6 rounded-xl border border-slate-700">
       <div className="flex items-center gap-3 mb-4">
         <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
-          <span className="text-white text-lg">laptop</span>
+          <Icon icon="laptop" size={24} className="text-purple-400" />
         </div>
-        <div>
-          <h4 className="font-bold text-purple-900 dark:text-purple-100">2000 Dot-Com Bubble</h4>
-          <p className="text-purple-700 dark:text-purple-300 text-sm">Tech Stock Crash</p>
+        <div className="flex flex-col">
+          <span className="font-bold text-purple-900 dark:text-purple-100">2000 Dot-Com Bubble</span>
+          <span className="text-purple-700 dark:text-purple-300 text-sm">Tech Stock Crash</span>
         </div>
       </div>
 
@@ -270,11 +252,11 @@ icon: 'chart-mixed'
     <div className="bg-green-50 dark:bg-green-900/20 p-6 rounded-xl border border-slate-700">
       <div className="flex items-center gap-3 mb-4">
         <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
-          <span className="text-white text-lg">virus</span>
+          <Icon icon="virus" size={24} className="text-green-400" />
         </div>
-        <div>
-          <h4 className="font-bold text-green-900 dark:text-green-100">2020 COVID-19 Crash</h4>
-          <p className="text-green-700 dark:text-green-300 text-sm">Pandemic-Induced Selloff</p>
+        <div className="flex flex-col">
+          <span className="font-bold text-green-900 dark:text-green-100">2020 COVID-19 Crash</span>
+          <span className="text-green-700 dark:text-green-300 text-sm">Pandemic-Induced Selloff</span>
         </div>
       </div>
 
@@ -296,93 +278,9 @@ icon: 'chart-mixed'
   </div>
 </div>
 
-## Market Regime Indicators
-
-<div className="grid grid-cols-1 md:grid-cols-2 gap-6 my-8">
-  <div className="bg-slate-900/50">
-    <h4 className="text-lg font-bold text-indigo-900 dark:text-indigo-100 mb-4">bar-chart Key Indicators to Watch</h4>
-
-    <div className="space-y-4">
-      <div className="bg-slate-800/50 p-4 rounded-lg">
-        <div className="flex justify-between items-center mb-2">
-          <span className="text-sm font-semibold text-indigo-800 dark:text-indigo-200">VIX (Fear Index)</span>
-          <span className="text-xs text-indigo-600 dark:text-indigo-400">Current: 18.5</span>
-        </div>
-        <div className="text-xs text-indigo-700 dark:text-indigo-300">
-          &lt;15: Complacent | 15-25: Normal | &gt;25: Fear
-        </div>
-      </div>
-
-      <div className="bg-slate-800/50 p-4 rounded-lg">
-        <div className="flex justify-between items-center mb-2">
-          <span className="text-sm font-semibold text-indigo-800 dark:text-indigo-200">Yield Curve (10Y-2Y)</span>
-          <span className="text-xs text-indigo-600 dark:text-indigo-400">Current: +1.2%</span>
-        </div>
-        <div className="text-xs text-indigo-700 dark:text-indigo-300">
-          Negative = Recession Warning
-        </div>
-      </div>
-
-      <div className="bg-slate-800/50 p-4 rounded-lg">
-        <div className="flex justify-between items-center mb-2">
-          <span className="text-sm font-semibold text-indigo-800 dark:text-indigo-200">Market Breadth</span>
-          <span className="text-xs text-indigo-600 dark:text-indigo-400">S&P: 67% above 200MA</span>
-        </div>
-        <div className="text-xs text-indigo-700 dark:text-indigo-300">
-          &gt;70%: Strong | &lt;30%: Weak
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div className="bg-slate-900/50">
-    <h4 className="text-lg font-bold text-orange-900 dark:text-orange-100 mb-4">alert-circle Crisis Warning Signs</h4>
-
-    <div className="space-y-3">
-      <div className="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg">
-        <div className="w-6 h-6 bg-slate-800 rounded-full flex items-center justify-center">
-          <span className="text-white text-xs">!</span>
-        </div>
-        <div className="text-sm text-orange-800 dark:text-orange-200">
-          Inverted yield curve (10Y < 2Y)
-        </div>
-      </div>
-
-      <div className="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg">
-        <div className="w-6 h-6 bg-slate-800 rounded-full flex items-center justify-center">
-          <span className="text-white text-xs">!</span>
-        </div>
-        <div className="text-sm text-orange-800 dark:text-orange-200">
-          High margin debt levels
-        </div>
-      </div>
-
-      <div className="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg">
-        <div className="w-6 h-6 bg-slate-800 rounded-full flex items-center justify-center">
-          <span className="text-white text-xs">!</span>
-        </div>
-        <div className="text-sm text-orange-800 dark:text-orange-200">
-          Extreme valuations (P/E > 25)
-        </div>
-      </div>
-
-      <div className="flex items-center gap-3 p-3 bg-slate-800/50 rounded-lg">
-        <div className="w-6 h-6 bg-slate-800 rounded-full flex items-center justify-center">
-          <span className="text-white text-xs">!</span>
-        </div>
-        <div className="text-sm text-orange-800 dark:text-orange-200">
-          Excessive speculation (meme stocks)
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
 ## How to Adapt Your Strategy
 
-<div className="bg-slate-900/50">
-  <h3 className="text-xl font-bold text-slate-200 mb-6 text-center">Regime-Based Investment Strategies</h3>
-
+<div className="bg-slate-900/50 my-8 p-6 rounded-xl border border-slate-700">
   <div className="overflow-x-auto">
     <table className="w-full">
       <thead>
@@ -431,16 +329,10 @@ icon: 'chart-mixed'
   </div>
 </div>
 
-<div className="bg-amber-50 dark:bg-amber-900/20 border border-slate-700 rounded-lg p-6 my-8">
-  <div className="flex items-start gap-4">
-    <div className="w-8 h-8 bg-slate-800 rounded-xl flex items-center justify-center flex-shrink-0">
-      <span className="text-white text-lg">lightbulb</span>
-    </div>
-    <div>
-      <h4 className="text-amber-800 dark:text-amber-200 font-bold mb-2">Key Takeaway</h4>
-      <p className="text-amber-700 dark:text-amber-300 text-sm">
-        Market regimes don't last forever. The key to successful long-term investing is recognizing regime changes early and adapting your strategy accordingly. Stay flexible, manage risk, and always have a plan for different market environments.
-      </p>
-    </div>
-  </div>
-</div>
+<Info>
+  Market regimes don't last forever
+</Info>
+
+<Tip>
+  The key to successful long-term investing is recognizing regime changes early and adapting your strategy accordingly. Stay flexible, manage risk, and always have a plan for different market environments.
+</Tip>
