--- a/trading/markets/stock-exchanges.mdx
+++ b/trading/markets/stock-exchanges.mdx
@@ -13,39 +13,26 @@ icon: 'landmark'
 
 ## What is a Stock Exchange?
 
-<div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700 my-8">
-  <div className="flex items-center gap-4 mb-4">
-    <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center border border-slate-600">
-      <Icon icon="bank" size={24} className="text-slate-300" />
-    </div>
-    <div>
-      <h3 className="text-xl font-bold text-slate-200">Global Trading Marketplaces</h3>
-      <p className="text-slate-400 text-sm">Where buyers and sellers meet to trade securities</p>
-    </div>
-  </div>
-  <p className="text-slate-300">
-    A stock exchange is a regulated marketplace where securities like stocks, bonds, and other financial instruments are bought and sold. Exchanges provide the infrastructure, rules, and oversight necessary for fair and orderly trading.
-  </p>
+A stock exchange is a regulated marketplace where securities like stocks, bonds, and other financial instruments are bought and sold. Exchanges provide the infrastructure, rules, and oversight necessary for fair and orderly trading.
 
-  <div className="grid grid-cols-1 md:grid-cols-2 gap-4 mt-6">
-    <div className="bg-slate-800/50 p-4 rounded-lg border border-slate-700">
-      <h4 className="text-slate-200 font-semibold mb-2">Exchange Functions</h4>
-      <ul className="text-slate-300 text-sm space-y-1">
-        <li>• Facilitate price discovery</li>
-        <li>• Ensure fair and orderly trading</li>
-        <li>• Provide market liquidity</li>
-        <li>• Enforce trading regulations</li>
-      </ul>
-    </div>
-    <div className="bg-slate-800/50 p-4 rounded-lg border border-slate-700">
-      <h4 className="text-slate-200 font-semibold mb-2">Trading Mechanisms</h4>
-      <ul className="text-slate-300 text-sm space-y-1">
-        <li>• Electronic order matching</li>
-        <li>• Market makers and specialists</li>
-        <li>• Auction-based price setting</li>
-        <li>• Real-time settlement systems</li>
-      </ul>
-    </div>
+<div className="grid grid-cols-1 md:grid-cols-2 gap-4 mt-6">
+  <div className="bg-slate-800/50 p-4 rounded-lg border border-slate-700">
+    <span className="text-slate-200 font-semibold mb-2">Exchange Functions</span>
+    <ul className="text-slate-300 text-sm space-y-1">
+      <li>Facilitate price discovery</li>
+      <li>Ensure fair and orderly trading</li>
+      <li>Provide market liquidity</li>
+      <li>Enforce trading regulations</li>
+    </ul>
+  </div>
+  <div className="bg-slate-800/50 p-4 rounded-lg border border-slate-700">
+    <span className="text-slate-200 font-semibold mb-2">Trading Mechanisms</span>
+    <ul className="text-slate-300 text-sm space-y-1">
+      <li>Electronic order matching</li>
+      <li>Market makers and specialists</li>
+      <li>Auction-based price setting</li>
+      <li>Real-time settlement systems</li>
+    </ul>
   </div>
 </div>
 
@@ -55,11 +42,11 @@ icon: 'landmark'
   <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
       <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center border border-slate-600">
-        <span className="text-slate-300 text-xl font-bold">NYSE</span>
+        <Icon icon="landmark" size={24} className="text-slate-300" />
       </div>
-      <div>
-        <h4 className="text-xl font-bold text-blue-900 dark:text-blue-100">New York Stock Exchange</h4>
-        <p className="text-blue-700 dark:text-blue-300 text-sm">The Big Board</p>
+      <div className='flex flex-col'>
+        <span className="text-xl font-bold text-blue-900 dark:text-blue-100">NYSE</span>
+        <span className="text-blue-700 dark:text-blue-300 text-sm">The Big Board</span>
       </div>
     </div>
 
@@ -114,14 +101,14 @@ icon: 'landmark'
     </div>
   </div>
 
-  <div className="bg-slate-900/50">
+  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
-      <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg font-bold">NASDAQ</span>
+      <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center border border-purple-600">
+        <Icon icon="landmark" size={24} className="text-slate-300" />
       </div>
-      <div>
-        <h4 className="text-xl font-bold text-purple-900 dark:text-purple-100">NASDAQ</h4>
-        <p className="text-purple-700 dark:text-purple-300 text-sm">Tech-Heavy Exchange</p>
+      <div className='flex flex-col'>
+        <span className="text-xl font-bold text-purple-900 dark:text-purple-100">NASDAQ</span>
+        <span className="text-purple-700 dark:text-purple-300 text-sm">Tech-Heavy Exchange</span>
       </div>
     </div>
 
@@ -177,150 +164,44 @@ icon: 'landmark'
   </div>
 </div>
 
-## S&P 500 Index Deep Dive
-
-<div className="bg-slate-900/50">
-  <div className="text-center mb-6">
-    <div className="w-16 h-16 bg-slate-800 rounded-xl flex items-center justify-center mx-auto mb-4">
-      <span className="text-white text-2xl font-bold">500</span>
-    </div>
-    <h3 className="text-2xl font-bold text-slate-200 mb-2">S&P 500 Index</h3>
-    <p className="text-slate-400">The benchmark of the US stock market</p>
-  </div>
-
-  <div className="grid grid-cols-1 md:grid-cols-3 gap-6">
-    <div className="bg-slate-800/50 p-5 rounded-xl border border-emerald-200 dark:border-emerald-700">
-      <h4 className="font-bold text-emerald-900 dark:text-emerald-100 mb-3">bar-chart Index Composition</h4>
-      <div className="space-y-2 text-sm text-emerald-800 dark:text-emerald-200">
-        <div className="flex justify-between">
-          <span>Technology:</span>
-          <span className="font-bold">28.5%</span>
-        </div>
-        <div className="flex justify-between">
-          <span>Financials:</span>
-          <span className="font-bold">13.2%</span>
-        </div>
-        <div className="flex justify-between">
-          <span>Healthcare:</span>
-          <span className="font-bold">12.8%</span>
-        </div>
-        <div className="flex justify-between">
-          <span>Consumer Disc.:</span>
-          <span className="font-bold">10.1%</span>
-        </div>
-        <div className="flex justify-between">
-          <span>Other Sectors:</span>
-          <span className="font-bold">35.4%</span>
-        </div>
-      </div>
-    </div>
-
-    <div className="bg-slate-800/50 p-5 rounded-xl border border-emerald-200 dark:border-emerald-700">
-      <h4 className="font-bold text-emerald-900 dark:text-emerald-100 mb-3">trophy Top Holdings</h4>
-      <div className="space-y-2 text-sm text-emerald-800 dark:text-emerald-200">
-        <div className="flex justify-between">
-          <span>Apple (AAPL):</span>
-          <span className="font-bold">7.2%</span>
-        </div>
-        <div className="flex justify-between">
-          <span>Microsoft (MSFT):</span>
-          <span className="font-bold">6.8%</span>
-        </div>
-        <div className="flex justify-between">
-          <span>Amazon (AMZN):</span>
-          <span className="font-bold">3.1%</span>
-        </div>
-        <div className="flex justify-between">
-          <span>NVIDIA (NVDA):</span>
-          <span className="font-bold">2.9%</span>
-        </div>
-        <div className="flex justify-between">
-          <span>Alphabet (GOOGL):</span>
-          <span className="font-bold">2.1%</span>
-        </div>
-      </div>
-    </div>
-
-    <div className="bg-slate-800/50 p-5 rounded-xl border border-emerald-200 dark:border-emerald-700">
-      <h4 className="font-bold text-emerald-900 dark:text-emerald-100 mb-3">trending-up Historical Performance</h4>
-      <div className="space-y-2 text-sm text-emerald-800 dark:text-emerald-200">
-        <div className="flex justify-between">
-          <span>1-Year Return:</span>
-          <span className="font-bold text-emerald-600">+12.3%</span>
-        </div>
-        <div className="flex justify-between">
-          <span>5-Year Avg:</span>
-          <span className="font-bold text-emerald-600">+10.1%</span>
-        </div>
-        <div className="flex justify-between">
-          <span>10-Year Avg:</span>
-          <span className="font-bold text-emerald-600">+11.2%</span>
-        </div>
-        <div className="flex justify-between">
-          <span>Since 1957:</span>
-          <span className="font-bold text-emerald-600">+10.5%</span>
-        </div>
-        <div className="flex justify-between">
-          <span>Best Year (1975):</span>
-          <span className="font-bold text-emerald-600">+37.2%</span>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div className="mt-6 bg-emerald-100 dark:bg-emerald-900/30 p-4 rounded-lg">
-    <div className="text-sm font-medium text-emerald-800 dark:text-emerald-200 mb-2">Key Facts:</div>
-    <div className="grid grid-cols-1 md:grid-cols-2 gap-4 text-xs text-emerald-700 dark:text-emerald-300">
-      <div>• Market cap weighted index</div>
-      <div>• Rebalanced quarterly</div>
-      <div>• Tracks 500 largest US companies</div>
-      <div>• Created by Standard & Poor's</div>
-    </div>
-  </div>
-</div>
-
 ## Vietnam Stock Exchanges
 
-<div className="bg-slate-900/50">
-  <div className="text-center mb-6">
-    <div className="w-16 h-16 bg-slate-800 rounded-xl flex items-center justify-center mx-auto mb-4">
-      <span className="text-white text-xl">🇻🇳</span>
-    </div>
-    <h3 className="text-2xl font-bold text-slate-200 mb-2">Vietnamese Stock Markets</h3>
-    <p className="text-slate-400">Emerging market with strong growth potential</p>
-  </div>
-
-  <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
-    <div className="bg-slate-800/50 p-6 rounded-xl border border-red-200 dark:border-red-700">
-      <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
-          <span className="text-white text-lg font-bold">HoSE</span>
-        </div>
-        <h4 className="font-bold text-red-900 dark:text-red-100">Ho Chi Minh Stock Exchange</h4>
+<div className="grid grid-cols-1 md:grid-cols-2 gap-6 my-8">
+  <div className="bg-slate-900/50 p-6 rounded-xl border border-red-200 dark:border-red-700">
+    <div className="flex items-center gap-3 mb-4">
+      <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center border border-red-600">
+        <Icon icon="landmark" size={24} className="text-white" />
       </div>
+      <div className='flex flex-col'>
+        <span className="text-xl font-bold text-red-900 dark:text-red-100">HCM Stock Exchange</span>
+        <span className="text-red-700 dark:text-red-300 text-sm">Vietnam's Largest Exchange</span>
+      </div>
+    </div>
 
-      <div className="space-y-3">
-        <div className="bg-red-50 dark:bg-red-900/30 p-3 rounded-lg">
-          <div className="grid grid-cols-2 gap-2 text-xs">
-            <div>
-              <div className="text-red-800 dark:text-red-200 font-semibold mb-1">Established</div>
-              <div className="text-red-600 dark:text-red-400">2000</div>
-            </div>
-            <div>
-              <div className="text-red-800 dark:text-red-200 font-semibold mb-1">Listed Companies</div>
-              <div className="text-red-600 dark:text-red-400">400+</div>
-            </div>
-            <div>
-              <div className="text-red-800 dark:text-red-200 font-semibold mb-1">Market Cap</div>
-              <div className="text-red-600 dark:text-red-400">$180B+</div>
-            </div>
-            <div>
-              <div className="text-red-800 dark:text-red-200 font-semibold mb-1">Main Index</div>
-              <div className="text-red-600 dark:text-red-400">VN-Index</div>
-            </div>
+    <div className="space-y-4">
+      <div className="bg-slate-800/50 p-4 rounded-lg border border-red-200 dark:border-red-700">
+        <div className="grid grid-cols-2 gap-4 text-sm">
+          <div>
+            <div className="text-red-800 dark:text-red-200 font-semibold mb-1">Established</div>
+            <div className="text-red-600 dark:text-red-400">2000</div>
+          </div>
+          <div>
+            <div className="text-red-800 dark:text-red-200 font-semibold mb-1">Market Cap</div>
+            <div className="text-red-600 dark:text-red-400">$180B+</div>
+          </div>
+          <div>
+            <div className="text-red-800 dark:text-red-200 font-semibold mb-1">Listed Companies</div>
+            <div className="text-red-600 dark:text-red-400">400+</div>
+          </div>
+          <div>
+            <div className="text-red-800 dark:text-red-200 font-semibold mb-1">Main Index</div>
+            <div className="text-red-600 dark:text-red-400">VN-Index</div>
           </div>
         </div>
+      </div>
 
+      <div className="space-y-2">
+        <div className="text-xs font-semibold text-red-800 dark:text-red-200 mb-2">Notable Features:</div>
         <div className="space-y-1 text-xs text-red-700 dark:text-red-300">
           <div className="flex items-center gap-2">
             <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
@@ -337,37 +218,43 @@ icon: 'landmark'
         </div>
       </div>
     </div>
+  </div>
 
-    <div className="bg-slate-800/50 p-6 rounded-xl border border-orange-200 dark:border-orange-700">
-      <div className="flex items-center gap-3 mb-4">
-        <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
-          <span className="text-white text-lg font-bold">HNX</span>
-        </div>
-        <h4 className="font-bold text-orange-900 dark:text-orange-100">Hanoi Stock Exchange</h4>
+  <div className="bg-slate-900/50 p-6 rounded-xl border border-orange-200 dark:border-orange-700">
+    <div className="flex items-center gap-3 mb-4">
+      <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center border border-orange-600">
+        <Icon icon="landmark" size={24} className="text-white" />
       </div>
+      <div className='flex flex-col'>
+        <span className="text-xl font-bold text-orange-900 dark:text-orange-100">Hanoi Stock Exchange</span>
+        <span className="text-orange-700 dark:text-orange-300 text-sm">Small & Mid-Cap Focus</span>
+      </div>
+    </div>
 
-      <div className="space-y-3">
-        <div className="bg-orange-50 dark:bg-orange-900/30 p-3 rounded-lg">
-          <div className="grid grid-cols-2 gap-2 text-xs">
-            <div>
-              <div className="text-orange-800 dark:text-orange-200 font-semibold mb-1">Established</div>
-              <div className="text-orange-600 dark:text-orange-400">2005</div>
-            </div>
-            <div>
-              <div className="text-orange-800 dark:text-orange-200 font-semibold mb-1">Listed Companies</div>
-              <div className="text-orange-600 dark:text-orange-400">400+</div>
-            </div>
-            <div>
-              <div className="text-orange-800 dark:text-orange-200 font-semibold mb-1">Market Cap</div>
-              <div className="text-orange-600 dark:text-orange-400">$20B+</div>
-            </div>
-            <div>
-              <div className="text-orange-800 dark:text-orange-200 font-semibold mb-1">Main Index</div>
-              <div className="text-orange-600 dark:text-orange-400">HNX-Index</div>
-            </div>
+    <div className="space-y-4">
+      <div className="bg-slate-800/50 p-4 rounded-lg border border-orange-200 dark:border-orange-700">
+        <div className="grid grid-cols-2 gap-4 text-sm">
+          <div>
+            <div className="text-orange-800 dark:text-orange-200 font-semibold mb-1">Established</div>
+            <div className="text-orange-600 dark:text-orange-400">2005</div>
+          </div>
+          <div>
+            <div className="text-orange-800 dark:text-orange-200 font-semibold mb-1">Market Cap</div>
+            <div className="text-orange-600 dark:text-orange-400">$20B+</div>
+          </div>
+          <div>
+            <div className="text-orange-800 dark:text-orange-200 font-semibold mb-1">Listed Companies</div>
+            <div className="text-orange-600 dark:text-orange-400">400+</div>
+          </div>
+          <div>
+            <div className="text-orange-800 dark:text-orange-200 font-semibold mb-1">Main Index</div>
+            <div className="text-orange-600 dark:text-orange-400">HNX-Index</div>
           </div>
         </div>
+      </div>
 
+      <div className="space-y-2">
+        <div className="text-xs font-semibold text-orange-800 dark:text-orange-200 mb-2">Notable Features:</div>
         <div className="space-y-1 text-xs text-orange-700 dark:text-orange-300">
           <div className="flex items-center gap-2">
             <div className="w-1 h-1 bg-slate-800 rounded-full"></div>
@@ -385,53 +272,17 @@ icon: 'landmark'
       </div>
     </div>
   </div>
-
-  <div className="mt-6">
-    <h4 className="font-bold text-slate-200 mb-4">trophy Top Vietnamese Stocks (VN-Index)</h4>
-    <div className="bg-slate-800/50 p-4 rounded-lg border border-red-200 dark:border-red-700">
-      <div className="grid grid-cols-1 md:grid-cols-2 gap-4 text-sm">
-        <div className="space-y-2">
-          <div className="flex justify-between">
-            <span className="text-slate-300">Vinhomes (VHM):</span>
-            <span className="font-bold text-red-600 dark:text-red-400">Real Estate</span>
-          </div>
-          <div className="flex justify-between">
-            <span className="text-slate-300">Vingroup (VIC):</span>
-            <span className="font-bold text-red-600 dark:text-red-400">Conglomerate</span>
-          </div>
-          <div className="flex justify-between">
-            <span className="text-slate-300">Bank for Investment (CTG):</span>
-            <span className="font-bold text-red-600 dark:text-red-400">Banking</span>
-          </div>
-        </div>
-        <div className="space-y-2">
-          <div className="flex justify-between">
-            <span className="text-slate-300">Vietcombank (VCB):</span>
-            <span className="font-bold text-red-600 dark:text-red-400">Banking</span>
-          </div>
-          <div className="flex justify-between">
-            <span className="text-slate-300">Bidv Bank (BID):</span>
-            <span className="font-bold text-red-600 dark:text-red-400">Banking</span>
-          </div>
-          <div className="flex justify-between">
-            <span className="text-slate-300">Masan Group (MSN):</span>
-            <span className="font-bold text-red-600 dark:text-red-400">Consumer Goods</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
 
 ## Other Major Global Exchanges
 
 <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 my-8">
-  <div className="bg-slate-900/50">
+  <div className="bg-slate-900/50 p-4 rounded-lg border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
       <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
         <span className="text-white text-lg">🇬🇧</span>
       </div>
-      <h4 className="font-bold text-blue-900 dark:text-blue-100">London Stock Exchange</h4>
+      <span className="font-bold text-blue-900 dark:text-blue-100">London Stock Exchange</span>
     </div>
 
     <div className="space-y-2 text-sm text-blue-800 dark:text-blue-200">
@@ -450,12 +301,12 @@ icon: 'landmark'
     </div>
   </div>
 
-  <div className="bg-slate-900/50">
+  <div className="bg-slate-900/50 p-4 rounded-lg border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
       <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
         <span className="text-white text-lg">🇯🇵</span>
       </div>
-      <h4 className="font-bold text-red-900 dark:text-red-100">Tokyo Stock Exchange</h4>
+      <span className="font-bold text-red-900 dark:text-red-100">Tokyo Stock Exchange</span>
     </div>
 
     <div className="space-y-2 text-sm text-red-800 dark:text-red-200">
@@ -474,12 +325,12 @@ icon: 'landmark'
     </div>
   </div>
 
-  <div className="bg-slate-900/50">
+  <div className="bg-slate-900/50 p-4 rounded-lg border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
       <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
         <span className="text-white text-lg">🇨🇳</span>
       </div>
-      <h4 className="font-bold text-green-900 dark:text-green-100">Shanghai Stock Exchange</h4>
+      <span className="font-bold text-green-900 dark:text-green-100">Shanghai Stock Exchange</span>
     </div>
 
     <div className="space-y-2 text-sm text-green-800 dark:text-green-200">
@@ -498,12 +349,12 @@ icon: 'landmark'
     </div>
   </div>
 
-  <div className="bg-slate-900/50">
+  <div className="bg-slate-900/50 p-4 rounded-lg border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
       <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
         <span className="text-white text-lg">🇩🇪</span>
       </div>
-      <h4 className="font-bold text-orange-900 dark:text-orange-100">Frankfurt Stock Exchange</h4>
+      <span className="font-bold text-orange-900 dark:text-orange-100">Frankfurt Stock Exchange</span>
     </div>
 
     <div className="space-y-2 text-sm text-orange-800 dark:text-orange-200">
@@ -522,12 +373,12 @@ icon: 'landmark'
     </div>
   </div>
 
-  <div className="bg-slate-900/50">
+  <div className="bg-slate-900/50 p-4 rounded-lg border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
       <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
         <span className="text-white text-lg">🇰🇷</span>
       </div>
-      <h4 className="font-bold text-purple-900 dark:text-purple-100">Korea Exchange</h4>
+      <span className="font-bold text-purple-900 dark:text-purple-100">Korea Exchange</span>
     </div>
 
     <div className="space-y-2 text-sm text-purple-800 dark:text-purple-200">
@@ -546,12 +397,12 @@ icon: 'landmark'
     </div>
   </div>
 
-  <div className="bg-slate-900/50">
+  <div className="bg-slate-900/50 p-4 rounded-lg border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
       <div className="w-10 h-10 bg-slate-800 rounded-lg flex items-center justify-center">
         <span className="text-white text-lg">🇮🇳</span>
       </div>
-      <h4 className="font-bold text-teal-900 dark:text-teal-100">Bombay Stock Exchange</h4>
+      <span className="font-bold text-teal-900 dark:text-teal-100">Bombay Stock Exchange</span>
     </div>
 
     <div className="space-y-2 text-sm text-teal-800 dark:text-teal-200">
@@ -571,69 +422,6 @@ icon: 'landmark'
   </div>
 </div>
 
-## Trading Hours Around the World
-
-<div className="bg-slate-900/50">
-  <h3 className="text-xl font-bold text-slate-200 mb-6 text-center">Global Trading Schedule (ET Time Zone)</h3>
-
-  <div className="overflow-x-auto">
-    <table className="w-full">
-      <thead>
-        <tr className="border-b border-slate-200 dark:border-slate-700">
-          <th className="text-left p-4 font-semibold text-slate-300">Exchange</th>
-          <th className="text-center p-4 font-semibold text-slate-300">Local Time</th>
-          <th className="text-center p-4 font-semibold text-slate-300">ET Time</th>
-          <th className="text-center p-4 font-semibold text-slate-300">Status</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr className="border-b border-slate-100 dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
-          <td className="p-4 font-medium text-blue-600 dark:text-blue-400">🇺🇸 NYSE/NASDAQ</td>
-          <td className="text-center p-4 text-slate-300">9:30 AM - 4:00 PM</td>
-          <td className="text-center p-4 text-slate-300">9:30 AM - 4:00 PM</td>
-          <td className="text-center p-4">
-            <span className="bg-green-100 dark:bg-green-900/30 text-green-800 dark:text-green-200 px-2 py-1 rounded text-xs">OPEN</span>
-          </td>
-        </tr>
-        <tr className="border-b border-slate-100 dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
-          <td className="p-4 font-medium text-red-600 dark:text-red-400">🇻🇳 HoSE/HNX</td>
-          <td className="text-center p-4 text-slate-300">9:00 AM - 3:00 PM</td>
-          <td className="text-center p-4 text-slate-300">9:00 PM - 3:00 AM+1</td>
-          <td className="text-center p-4">
-            <span className="bg-red-100 dark:bg-red-900/30 text-red-800 dark:text-red-200 px-2 py-1 rounded text-xs">CLOSED</span>
-          </td>
-        </tr>
-        <tr className="border-b border-slate-100 dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
-          <td className="p-4 font-medium text-purple-600 dark:text-purple-400">🇬🇧 LSE</td>
-          <td className="text-center p-4 text-slate-300">8:00 AM - 4:30 PM</td>
-          <td className="text-center p-4 text-slate-300">3:00 AM - 11:30 AM</td>
-          <td className="text-center p-4">
-            <span className="bg-red-100 dark:bg-red-900/30 text-red-800 dark:text-red-200 px-2 py-1 rounded text-xs">CLOSED</span>
-          </td>
-        </tr>
-        <tr className="border-b border-slate-100 dark:border-slate-800 hover:bg-slate-50 dark:hover:bg-slate-800/50">
-          <td className="p-4 font-medium text-green-600 dark:text-green-400">🇯🇵 TSE</td>
-          <td className="text-center p-4 text-slate-300">9:00 AM - 3:00 PM</td>
-          <td className="text-center p-4 text-slate-300">7:00 PM - 1:00 AM+1</td>
-          <td className="text-center p-4">
-            <span className="bg-red-100 dark:bg-red-900/30 text-red-800 dark:text-red-200 px-2 py-1 rounded text-xs">CLOSED</span>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
-
-<div className="bg-amber-50 dark:bg-amber-900/20 border border-slate-700 rounded-lg p-6 my-8">
-  <div className="flex items-start gap-4">
-    <div className="w-8 h-8 bg-slate-800 rounded-xl flex items-center justify-center flex-shrink-0">
-      <span className="text-white text-lg">lightbulb</span>
-    </div>
-    <div>
-      <h4 className="text-amber-800 dark:text-amber-200 font-bold mb-2">Key Takeaway</h4>
-      <p className="text-amber-700 dark:text-amber-300 text-sm">
-        Understanding different exchanges helps you diversify globally and take advantage of different market opportunities. Each exchange has unique characteristics, trading hours, and investment options that can complement your portfolio strategy.
-      </p>
-    </div>
-  </div>
-</div>
+<Tip>
+  Understanding different exchanges helps you diversify globally and take advantage of different market opportunities. Each exchange has unique characteristics, trading hours, and investment options that can complement your portfolio strategy.
+</Tip>
